feat(dashboard): 添加 Docker 容器列表功能
- 在 DashboardController 中新增 getDockerContainers 方法，获取服务器上的 Docker 容器列表
- 在前端 main.js 中添加 Docker 容器列表的渲染逻辑和交互功能
- 更新 styles.css，为 Docker 容器列表添加样式